Fixed the favorites menu overlapping.

--- a/styles/popupstyle.css
+++ b/styles/popupstyle.css
@@ -14,6 +14,10 @@ body{
     }
 }
 
+*:focus{
+    outline: none;
+}
+
 .pop-up {
     position: absolute;
     display: flex;
